tests/webpack-test/cases/errors/harmony-import-missing/module.js
export * from "./a";
export * from "./missing";
